@@ -137,7 +137,7 @@
                                     <a href="http://issues.apache.org/bugzilla/enter_bug.cgi?product=Ant">Bug Database</a>
                                 </li>
                             <li>
-                                    <a href="http://issues.apache.org/bugzilla/enter_bug.cgi?product=Ant&amp;bug_severity=Enhancement">Enhancement Requests</a>
+                                    <a href="http://issues.apache.org/bugzilla/enter_bug.cgi?product=Ant&amp;bug_severity=enhancement">Enhancement Requests</a>
                                 </li>
                             <li>
                                     <a href="http://www.apache.org/foundation/contributing.html">Donations</a>
@@ -5183,7 +5183,10 @@
       </th>
                           <td colspan="1" rowspan="1"
       valign="top" align="left">
-          Ant 1.3 - 1.4.1
+          
+              Ant 1.3 - 1.4.1
+              Bundles Ant 1.6.2 as of Eclipse 3.0.1 (tested with Ant 1.5.4 - 1.6.2)
+            
       </td>
       </tr>
                   <tr>
@@ -5193,7 +5196,13 @@
       </th>
                           <td colspan="1" rowspan="1"
       valign="top" align="left">
-          <a href="http://www.eclipse.org/">http://www.eclipse.org/</a>
+          
+              <a href="http://www.eclipse.org/">http://www.eclipse.org/</a>
+              or
+              <a href="http://dev.eclipse.org/viewcvs/index.cgi/~checkout~/platform-ant-home/index.html">
+                http://dev.eclipse.org/viewcvs/index.cgi/~checkout~/platform-ant-home/index.html
+              </a> 
+            
       </td>
       </tr>
                   <tr>
@@ -5203,7 +5212,7 @@
       </th>
                           <td colspan="1" rowspan="1"
       valign="top" align="left">
-          <a href="news://news.eclipse.org/eclipse.tools">news://news.eclipse.org/eclipse.tools</a>
+          <a href="news://news.eclipse.org/eclipse.platform">news://news.eclipse.org/eclipse.platform</a>
       </td>
       </tr>
                   <tr>
