@@ -53,7 +53,7 @@
                 <item name="Mailing Lists"         href="/mail.html"/>
                 <item name="CVS Repositories"      href="/cvs.html"/>
                 <item name="Bug Database"          href="http://issues.apache.org/bugzilla/enter_bug.cgi?product=Ant"/>
-                <item name="Enhancement Requests"  href="http://issues.apache.org/bugzilla/enter_bug.cgi?product=Ant&amp;amp;bug_severity=Enhancement"/>
+                <item name="Enhancement Requests"  href="http://issues.apache.org/bugzilla/enter_bug.cgi?product=Ant&amp;amp;bug_severity=enhancement"/>
                 <item name="Donations"             href="http://www.apache.org/foundation/contributing.html"/>
             </menu>
 
