@@ -79,6 +79,9 @@ Other changes:
 * Added support to the touch task for a verbose attribute to suppress
   logging of new file creation.
 
+* bad link in docs to the enhancement page in bugzilla.
+  Bugzilla report 33252.
+
 Fixed bugs:
 -----------
 
